<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--  Activity Names -->
    <string name="mainTitle">Money Tracker</string>
    <string name="activity_main">Money Manager</string>
    <string name="activity_balance">Balance View</string>
    <string name="activity_newEntry">New Entry</string>
    <string name="activity_peopleList">People List</string>
    <string name="activity_amountModal">Owe</string>
    <string name="activity_addPeople">People Add</string>
    <string name="activity_indivBal">Individual Balance</string>
    <string name="activity_editBalance">Edit Balance</string>
    <string name="activity_help">Help</string>
    <string name="activity_viewEntry">View Entry</string>
        
    <!-- Application Defaults -->
    <string name="defaultTextTitleSize">22sp</string>
    <string name="defaultTextSize">18sp</string>
    <string name="defaultTextColor">#000000</string>
    <string name="defaultBackgroundColor">#FFFFFF</string>
    <string name="defaultGreenColor">#00A300</string>
    
    <!--  Strings by screen -->
    <!--  Reusable Strings -->
    <string name="back">Back</string>
    <string name="done">Done</string>
    
    <!--  Title Screen -->
    <string name="title_mainTitle">Money Manager</string>
    <string name="title_balanceView">View Balances</string>
    <string name="title_addPerson">Add New Person</string>
    <string name="title_addEntry">Add New Entry</string>
    <string name="title_help">Help</string>
    
    <!--  View Balances Screen -->
    <string name="balance_mainTitle">Balances</string>
    <string name="emptyBalances">No Active Balances!</string>
    <string name="balancelist_bal">Balance:</string>
    <string name="balancelist_entry">Latest Entry:</string>
    <string name="balancelist_noentry">No Entry</string>
    
    <!--  New Entry Screen -->
    <string name="entry_mainTitle">New Entry</string>
    <string name="entry_Who">Who:</string>
    <string name="entry_Where">Where:</string>
    <string name="entry_Amount">Amount:</string>
    <string name="entry_Notes">Notes:</string>
    <string name="entry_Submit">Submit</string>
    <string name="entry_divide">Divide Total Balance</string>
    <string name="entry_include">Include Yourself in Division?</string>

    <!--  People List Screen -->
    <string name="peopleList_title">Add People</string>
    <string name="peopleList_addNew">Add New Person</string>
    <string name="peopleList_done">Done</string>

    <!-- Amount Modal Screen -->
    <string name="amountmodal_Title">Enter Amount:</string>
    <string name="amountmodal_newEntryPos">I Lent</string>
    <string name="amountmodal_newEntryNeg">I Borrowed</string>
    <string name="amountmodal_newUserPos">I Lent</string>
    <string name="amountmodal_newUserNeg">I Borrowed</string>
    <string name="amountmodal_updateNegBalNeg">Increase Debt</string>
    <string name="amountmodal_updateNegBalPos">Decrease Debt</string>
    <string name="amountmodal_updatePosBalNeg">Decrease Credit</string>
    <string name="amountmodal_updatePosBalPos">Increase Credit</string>
    
    <!-- People Add Screen -->
    <string name="peopleAdd_Title">Add Person</string>
    <string name="peopleAdd_name">Name:</string>
    <string name="peopleAdd_bal">Existing Balance:</string>
    <string name="peopleAdd_initial">Initial Balance:</string>

    <!-- View Balance Screen -->
    <string name="viewBal_bal">Balance:</string>
    <string name="viewBal_edit">Edit Balance</string>
    <string name="viewBal_del">Delete User</string>
    <string name="viewBal_empty">No Entries!</string>

    <!-- Delete Modal -->
    <string name="del_yes">Yes</string>
    <string name="del_no">No</string>
    
    <!-- Edit Balance Screen -->
    <string name="editBal_title">Edit Balance</string>
    <string name="editBal_currAmount">Current Amount:</string>
    <string name="editBal_why">Why:</string>
    <string name="editBal_amount">Amount:</string>
    
    <!--  View Entry Screen -->
    <string name="viewEntry_title">View Entry</string>
    <string name="viewEntry_date">Date:</string>
    <string name="viewEntry_delete">Delete Entry</string>
    <string name="viewEntry_notes">None</string>
    
    <!-- Help Screen -->
    <string name="help_intro">Thank you for downloading Money Manager.  The purpose of this application is to help you keep track of who you\'ve lent or borrowed money from.\n</string>
    <string name="help_howTo">How to:\n</string>
    <string name="help_addPersonTitle">Add a Person:\n</string>
    <string name="help_addPerson">• The first step in using Money Manager is to add people for which you can create entries.  This can be done through the \'Add New Person\' option on the main screen or when creating the actual entry itself.
          When creating a new person, you can also add a prexisting balance if one exists.\n</string>
    <string name="help_addEntryTitle">Add an Entry:\n</string>
    <string name="help_addEntry">• Next, it\'s time to add an entry.  The add entry screen can be displayed via the \'Add New Entry\' button on the main screen.  Here there are form fields pertaining to the entry itself.  These fields include:\n</string> 
    <string name="help_addEntryWho">• Who - Tapping this field will display a screen where you can select people you\'ve created.  You can select more than one person for an entry.  Also, you can add new people here too.\n</string>
    <string name="help_addEntryWhere">• Where - A text box pertaining to where the entry occurred or what the entry was.\n</string>
    <string name="help_addEntryAmount">• Amount - Tapping this field displays a pop-up where you can supply an amount for the entry as well check-off whether you lent or borrowed money.\n</string>
    <string name="help_addEntryNotes">• Notes - A text box where you can enter any other notes you\'d like to keep track of.\n</string>
    <string name="help_addEntryFinish">• All fields are mandatory except the Notes field.  When all the fields have been filled, select the \'Submit\' button on the bottom of the screen and the entry will be complete.\n</string>
	<string name="help_addEntryChecks">• When an entry pertains to multiple people, checking the \'Divide Total Balance\' option will change the amount entered for each person in the entry to be the total amount entered divided by the number of people.  Otherwise, the total amount entered will be attributed to each user.  Checking off the \'Include Self\' option will deduct an amount pertaining to you before dividing the balance among others.\n</string>
	<string name="help_viewBalancesTitle">View Balances:\n</string>
	<string name="help_viewBalances">• To view balances, tap the \'View Balances\' button on the main screen.  This will display the balance screen where you can see an overview of all the balances you hold with people.\n\n</string>
	<string name="help_viewBalancesRed">Red</string>
	<string name="help_viewBalancesRedExplain">Balances indicate that you are currently in debt with that person.\n</string>
	<string name="help_viewBalancesGreen">Green</string>
	<string name="help_viewBalancesGreenExplain"> Balances indicate that you currently hold a credit that person.\n\n</string>
	<string name="help_viewBalancesMore">• Clicking on any of the rows in the list will bring you to the Balance screen for that person.  Here you can see a summary of the entries you have with that person.  Also, this screen offers the ability to edit the balance you have with that person and also to delete that person.\n</string>

	<!-- Email -->
	<string name="mail_promo">\nThis message was written by Money Manager.  I keep track of when I lend or borrow money with Money Manager.  Look for it on the Android Market!</string>
	<string name="mail_summary">A summary of the events that contributed to this balance can be found below:\n\n</string>
	<string name="mail_iOwe">I currently owe you a total of $</string>
	<string name="mail_youOwe">You currently owe me a total of $</string>
	<string name="mail_even">We are currently at an even balance.\n</string>
</resources>