<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >
    
	<LinearLayout 
	    android:id="@+id/root"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:gravity="center_horizontal"
	    android:background="#FFFFFF">
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:text="@string/entry_mainTitle"
	        android:textColor="#000000"
	        android:textSize="22sp"
	        android:paddingBottom="25sp" />
	    
	    <!--  Dummy LinearLayout to prevent other text fields from automatically highlighting -->
	    <LinearLayout
	    	android:focusable="true" android:focusableInTouchMode="true"
	    	android:layout_width="0px" android:layout_height="0px"/>
    
		
		<LinearLayout
			android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:gravity="center_horizontal"
		    android:paddingBottom="10sp">
		        
			<TextView
			    android:id="@+id/entry_whoText"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/entry_Who"
			    android:textColor="#000000"
			    android:textSize="18sp"
			    android:paddingRight="5sp"/>
		    
		    <EditText
		        android:id="@+id/entry_whoBox"
		        android:layout_width="152dp"
		        android:layout_height="wrap_content"
		        android:focusable="false"
		        android:focusableInTouchMode="false"
		        android:clickable="true"/>
		</LinearLayout>
		
	    <LinearLayout
			android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:gravity="center_horizontal"
		    android:paddingBottom="10sp">
		        
			<TextView
			    android:id="@+id/entry_whereText"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/entry_Where"
			    android:textColor="#000000"
			    android:textSize="18sp"
			    android:paddingRight="5sp"/>
		    
		    <EditText
		        android:id="@+id/entry_whereBox"
		        android:layout_width="152dp"
		        android:layout_height="wrap_content"
		        android:inputType="textCapSentences"
		        />
		</LinearLayout>
		
	    <LinearLayout
			android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:gravity="center_horizontal"
		    android:paddingBottom="10sp">
		        
			<TextView
			    android:id="@+id/entry_amountText"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/entry_Amount"
			    android:textColor="#000000"
			    android:textSize="18sp"
			    android:paddingRight="5sp"/>
		    	
		    <EditText
		        android:id="@+id/entry_amountBox"
		        android:layout_width="137dp"
		        android:layout_height="wrap_content"
		        android:textSize="18sp"
		        android:focusable="false"
		        android:focusableInTouchMode="false"
		        android:clickable="true"/>
	
		</LinearLayout>
		
	   	<LinearLayout
			android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:gravity="center_horizontal"
		    android:paddingBottom="10sp">
		        
			<TextView
			    android:id="@+id/entry_notesText"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/entry_Notes"
			    android:textColor="#000000"
			    android:textSize="18sp"
			    android:paddingRight="5sp"/>
			<EditText
			    android:id="@+id/entry_notesBox"
			    android:layout_height="95dp"
			    android:layout_width="137dp"
			    android:inputType="textMultiLine"
			     >
			</EditText>
	   	</LinearLayout>
	   	
	 	<LinearLayout
			android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:gravity="center_horizontal"
		    android:paddingBottom="10sp">
		        
			<TextView
			    android:id="@+id/entry_divideText"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/entry_divide"
			    android:textColor="#000000"
			    android:textSize="18sp"
			    android:paddingRight="5sp"/>
			
			<CheckBox
			    xmlns:android="http://schemas.android.com/apk/res/android"
			    android:id="@+id/entry_divideCheckBox"
			    android:layout_height="wrap_content"
			    android:layout_width="wrap_content"
			    android:textColor="#000000"
			    android:textSize="18sp"
			    android:enabled="false"/>
	    </LinearLayout>
	
	   	<Button
	   	    android:id="@+id/submitButton"
	   	    android:layout_width="wrap_content"
	   	    android:layout_height="wrap_content"
	   	    android:text="@string/entry_Submit" />
	
	</LinearLayout>
</ScrollView>